--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 <div id="main">
 <h1>
-<a href="/kairo/"><img src="./images/kairo/title2.png" alt="論理回路性格診断" border=0></a>
+<a href="/kairo/"><img src="./images/title2.png" alt="論理回路性格診断" border=0></a>
 </h1>
 <h3>
 数学やコンピューターサイエンスで登場する<br>
@@ -18,30 +18,30 @@
 </h3>
 <div class="contents">
 <table>
-<tr><td><img src="./images/kairo/mascot_and.png"></td><td><div class="serif"><strong>AND</strong><br>
+<tr><td><img src="./images/mascot_and.png"></td><td><div class="serif"><strong>AND</strong><br>
 A,B共に1の時のみ、1が出力される。<br>
 →みんながやってることが大好き。
 </div></td></tr>
-<tr><td><img src="./images/kairo/mascot_nand.png"></td><td><div class="serif"><strong>NAND</strong><br>
+<tr><td><img src="./images/mascot_nand.png"></td><td><div class="serif"><strong>NAND</strong><br>
 A,B共に1の時のみ、0が出力される。<br>
 →流行りだすと冷める。
 
 </div></td></tr>
-<tr><td><img src="./images/kairo/mascot_nor.png"></td><td><div class="serif"><strong>NOR</strong><br>
+<tr><td><img src="./images/mascot_nor.png"></td><td><div class="serif"><strong>NOR</strong><br>
 A,B共に0のときのみ、1が出力される。<br>
 →独占欲が強い。
 
 </div></td></tr>
-<tr><td><img src="./images/kairo/mascot_not.png"></td><td><div class="serif"><strong>NOT</strong><br>
+<tr><td><img src="./images/mascot_not.png"></td><td><div class="serif"><strong>NOT</strong><br>
 入力されたビットでないビットが出力される。1→0,0→1<br>
 →あまのじゃく。
 </div></td></tr>
-<tr><td><img src="./images/kairo/mascot_or.png"></td><td><div class="serif"><strong>OR</strong><br>
+<tr><td><img src="./images/mascot_or.png"></td><td><div class="serif"><strong>OR</strong><br>
 A,Bどちらかが1、又は共に1の時のみ、1が出力される。<br>
 →他人の話を鵜呑みにする。
 
 </div></td></tr>
-<tr><td><img src="./images/kairo/mascot_xor.png"></td><td><div class="serif"><strong>XOR</strong><br>
+<tr><td><img src="./images/mascot_xor.png"></td><td><div class="serif"><strong>XOR</strong><br>
 AとBが異なっている時、1が出力される。<br>
 →他人の仲間割れが快感。
 
@@ -56,7 +56,7 @@ AとBが異なっている時、1が出力される。<br>
 <form method="POST" action="q.php" name="start">
 お名前：<input type="text" width="20" name="n">
 <div id="start">
-<submit type="image" onclick="start.submit();" onmouseover='document.start_img.src="./images/kairo/start_over.png";' onmouseout='document.start_img.src="./images/kairo/start.png";'><img name="start_img" src="./images/kairo/start.png" width="300" height="95" alt="スタート"></a>
+<submit type="image" onclick="start.submit();" onmouseover='document.start_img.src="./images/start_over.png";' onmouseout='document.start_img.src="./images/start.png";'><img name="start_img" src="./images/start.png" width="300" height="95" alt="スタート"></a>
 </div>
 </form>
 
@@ -73,7 +73,7 @@ src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
 </script>
 
 </div>
-<img src="./images/kairo/start_over.png" width="1" height="1">
+<img src="./images/start_over.png" width="1" height="1">
 <font color="#FFFFFF">■ http://mnlab.sakura.ne.jp/kairo/ ■ since 2009.12.17 ■ 問題作成：Rika プログラミング：いりも ■ </font>
 </body>
 </html>
