--- a/tpl/kairo/q.html
+++ b/tpl/kairo/q.html
@@ -9,7 +9,7 @@
 <body>
 <div id="main_qhtml">
 <h1>
-<a href="/kairo/"><img src="./images/kairo/title2.png" alt="論理回路性格診断" border=0></a>
+<a href="/kairo/"><img src="./images/title2.png" alt="論理回路性格診断" border=0></a>
 </h1>
 <form method=POST action={$nextpage} name=que>
 
