--- a/tpl/kairo/a.html
+++ b/tpl/kairo/a.html
@@ -9,7 +9,7 @@
 <body>
 <div id="main">
 <h1>
-<a href="/kairo/"><img src="./images/kairo/title2.png" alt="論理回路性格診断" border="0"></a>
+<a href="/kairo/"><img src="./images/title2.png" alt="論理回路性格診断" border="0"></a>
 </h1>
 <h3>
 
